# group_16_assignment_1

./: README.md
group_16_assignment_1/: README.md
group_16_assignment_1/ir_master_launch/: package.xml  setup.cfg  setup.py
group_16_assignment_1/ir_master_launch/launch/: general.launch.py  simulation.launch.py
group_16_assignment_1/turtlebot3_navigation/src/apriltag_detect/: package.xml
group_16_assignment_1/turtlebot3_navigation/src/apriltag_detect/cfg/: tags_36h11.yaml
group_16_assignment_1/turtlebot3_navigation/src/apriltag_detect/src/: AprilTagNode.cpp  tag_functions.cpp
group_16_assignment_1/turtlebot3_navigation/src/compute_goal/: package.xml
group_16_assignment_1/turtlebot3_navigation/src/compute_goal/compute_goal/: compute_goal_node.py
group_16_assignment_1/turtlebot3_navigation/src/initial_pose_publisher/: package.xml
group_16_assignment_1/turtlebot3_navigation/src/initial_pose_publisher/src/: initial_pose_publisher.cpp
group_16_assignment_1/turtlebot3_navigation/src/navigation_node/: package.xml
group_16_assignment_1/turtlebot3_navigation/src/navigation_node/src/: navigation_node.cpp
ir_master_launch/: package.xml  setup.py
ir_master_launch/launch/: assignment_1.launch.py  general.launch.py
turtlebot3_navigation/compute_goal/: compute_goal_2.cpp
turtlebot3_navigation/src/: assignment_1.launch.py
turtlebot3_navigation/src/apriltag_detect/: CMakeLists.txt
turtlebot3_navigation/src/apriltag_detect/cfg/: qos_overrides.yaml
turtlebot3_navigation/src/apriltag_detect/launch/: apriltag_launch.py  camera_36h11.launch.yml
turtlebot3_navigation/src/apriltag_detect/src/: conversion.cpp  pose_estimation.cpp
turtlebot3_navigation/src/compute_goal/: setup.cfg  setup.py
turtlebot3_navigation/src/compute_goal/compute_goal/: compute_goal_2  compute_goal_node.py
turtlebot3_navigation/src/initial_pose_publisher/: CMakeLists.txt  package.xml
turtlebot3_navigation/src/initial_pose_publisher/src/: initial_pose_publisher.cpp
turtlebot3_navigation/src/navigation_node/: CMakeLists.txt  navigation_node.cpp  package.xml
turtlebot3_navigation/src/navigation_node/src/: navigation_node.cpp  navigation_node2.cpp
turtlebot3_navigation/src/table_node/: package.xml  setup.cfg  setup.py
turtlebot3_navigation/src/table_node/table_node/: table_detection_node.py
(+1 files in other folders)
