<?xml version="1.0"?>
<package format="3">
  <name>navigation_node</name>
  <version>0.0.1</version>
  <description>Custom navigation behaviors for TurtleBot3</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Dipendenze build -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dipendenze runtime + build -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>

  <!-- Necessario se usi ros2 launch -->
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

