<?xml version="1.0"?>
<package format="3">
  <name>initial_pose_publisher</name>
  <version>0.1.0</version>
  <description>Publisher initialpose</description>

  <maintainer email="email@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

